# r-quest

./: .env  .env-test  Cargo.toml  README.md  diesel.toml  sqlite.db  test_config.toml
migrations/2025-07-16-233428_create_project/: down.sql  up.sql
migrations/2025-07-16-234550_change_name_on_query/: down.sql  up.sql
migrations/2025-07-27-132057_refacto_variable/: up.sql
src/: cli.rs  consts.rs  db.rs  dragon.rs  env.rs  lib.rs  loader.rs  main.rs  model.rs  runner.rs  schema.rs  script.rs  server.rs  share.rs  template.rs  variable.rs
tests/: test_loader.rs
