[package]
name = "quest"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
diesel = { version = "2.2.0", features = ["sqlite", "chrono", "r2d2"] }
dotenvy = "0.15"
env_logger = "0.11.8"
log = "0.4.27"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
uuid = "1.17.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.9.2"
anyhow = "1.0.98"
serde_json = "1.0.141"

tokio          = { version = "1.39", features = ["macros", "rt-multi-thread"] }
reqwest        = { version = "0.12", features = ["json", "rustls-tls"] }

clap           = { version = "4.5.41", features = ["derive"] }
dialoguer      = "0.11.0"
regex = "1.11.1"
