[package]
name = "qwest"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
diesel = { version = "2.2.0", features = ["sqlite", "chrono"] }
dotenvy = "0.15"
env_logger = "0.11.8"
log = "0.4.27"
uuid = "1.17.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.9.2"
anyhow = "1.0.98"
serde_json = "1.0.141"

tokio          = { version = "1.39", features = ["macros", "rt-multi-thread"] }
reqwest        = { version = "0.12", features = ["brotli", "cookies", "deflate", "gzip", "json", "rustls-tls"] }

clap           = { version = "4.5.41", features = ["derive"] }
dialoguer      = "0.11.0"
regex = "1.11.1"
rhai = { version = "1.22.2", features = ["serde", "sync"] }
dirs = "6.0.0"
console = "0.16.0"
tabled = "0.20.0"
indicatif = "0.18.0"
colored = "2"
jsonpath_lib = "0.3.0"
reqwest_cookie_store = "0.8.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }


[[bin]]
name = "qwest"
path = "src/main.rs"
